--- a/app_documento/app/assets/stylesheets/logdocumento.css.scss
+++ b/app_documento/app/assets/stylesheets/logdocumento.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the logdocumento controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// VINOTINTO
+$hover_color      : rgba(116,14,0,1);
+$background_color : rgba(128,0,0,1);
+$list_selected    : rgba(116,14,0,0.8);
+$list_even        : rgba(116,14,0,0.7);
+$list_hover       : rgba(116,14,0,0.5);
+$border_color     : #555;
