--- a/app_documento/app/assets/stylesheets/logproductos.css.scss
+++ b/app_documento/app/assets/stylesheets/logproductos.css.scss
@@ -7,6 +7,14 @@ $list_even     : #5294AA;
 $list_hover    : #74B6CC;
 $list_selected : #396877; 
 
+// VINOTINTO
+$hover_color      : rgba(116,14,0,1);
+$background_color : rgba(128,0,0,1);
+$list_selected    : rgba(116,14,0,0.8);
+$list_even        : rgba(116,14,0,0.7);
+$list_hover       : rgba(116,14,0,0.5);
+$border_color     : #555;
+
 
 .formtastic {
     list-style:none;
