--- a/app_documento/app/assets/stylesheets/application.css.scss
+++ b/app_documento/app/assets/stylesheets/application.css.scss
@@ -23,7 +23,16 @@
 $hover_color      : #718fb0;
 $background_color : #133a6b;
 $border_color     : #555;
-$list_selected    : #396877; 
+$list_selected    : #396877;
+
+// VINOTINTO
+$hover_color      : rgba(116,14,0,1);
+$background_color : rgba(128,0,0,1);
+$list_selected    : rgba(116,14,0,0.8);
+$list_even        : rgba(116,14,0,0.7);
+$list_hover       : rgba(116,14,0,0.5);
+$border_color     : #555;
+
 
 body {
   font-family: helvetica !important;
