--- a/app_documento/app/views/inicio/index.html.erb
+++ b/app_documento/app/views/inicio/index.html.erb
@@ -2,11 +2,11 @@
   <table id="tablas_inicio" >
     <tr>
       <% if current_usuario.admin == 0 %>
-        <td class="titulos_inicio">Mis productos</td>
-        <td class="titulos_inicio">Mis Solicitudes</td>
+      <td class="titulos_inicio">Mis productos</td>
+      <td class="titulos_inicio">Mis Solicitudes</td>
       <% else %>
-        <td class="titulos_inicio">Registro de Actividades</td>
-        <td class="titulos_inicio">Solicitudes Pendientes</td>
+      <td class="titulos_inicio">Registro de Actividades</td>
+      <td class="titulos_inicio">Solicitudes Pendientes</td>
       <% end %>
     </tr>
     <tr>
@@ -25,7 +25,7 @@
           </thead>
           <tbody>
             <% if current_usuario.admin == 0%>
-              <!-- NOTE: for de los porductos/registros -->
+              <!-- NOTE: for de los productos/registros -->
               <% @productos.each do |p|%>
                 <tr>
                   <td><%= link_to p.nombre, p%></td>
@@ -44,56 +44,69 @@
           </thead>
           <tbody>
             <% @tablader.each_with_index do |t, index| %>
-              <tr>
-                <td style="text-align: left; height:70px;">
-                  <%= content_tag "span", class: "content-tramite", id:"estado"+index.to_s, data: { requisito: t } do %>
-                    <% if t.recibido or current_usuario.admin > 0 %>
-                      <%= link_to (t) do%>
-                        <ul style="height:0;">
-                          <li>
-                          <%= t.TipoDocumento.descripcion %>
-                          </li>
-                          <li style="font-size:10px; margin-bottom:10px;">
-                          <% if not t.producto.nil? %>
-                            <%=t.producto.nombre%>
-                          <% else %>
-                            nuevo producto
-                          <% end %>
-                          </li>
+
+                <tr>
+                  <td style="text-align: left; height:70px;padding-left: -20px important;">
+                    <%= content_tag "span", class: "content-tramite", id:"estado"+index.to_s,
+                        data: { requisito: t } do %>
+
+                      <% if t.recibido or current_usuario.admin > 0 %>
+                        <%= link_to (t) do%>
+                          <ul style="height:0;">
+                            <li style="width:285px;">
+                              <b>#<%=t.id %></b>
+                              <%= t.TipoDocumento.descripcion %>
+                            </li>
+                            <li style="font-size:10px; margin-bottom:10px;margin-right: 50px;">
+                              <% if not t.producto.nil? %>
+                              <%=t.producto.nombre%>
+                              <% else %>
+                              nuevo producto
+                              <% end %>
+                            </li>
                         <% end %>
                       <% else %>
                         <ul style="height:0;">
                           <li>
-                          <%= t.TipoDocumento.descripcion %>
+                            <b>#<%=t.id %></b>
+                            <%= t.TipoDocumento.descripcion %>
                           </li>
-                          <li style="font-size:10px; margin-bottom:10px;">
-                          <% if not t.producto.nil? %>
-                            <%=t.producto.nombre%>
-                          <% else %>
-                            nuevo producto
-                          <% end %>
+                          <li style="font-size:10px; margin-bottom:10px;margin-right: 50px;">
+                            <% if not t.producto.nil? %>
+                              <%=t.producto.nombre%>
+                            <% else %>
+                              nuevo producto
+                            <% end %>
                           </li>
                         <% end %>
                       <% end %>
                     </td>
                   </tr>
-                <% end %>
-              </tbody>
+            <% end %>
+          </tbody>
+        </table>
+      </td>
 
-            </table>
+      <table style="width:400px;">
+        <tr>
+          <td>
+            <div class="alerta" style="background: white;float:left"></div>
+            <div style="font-size:x-small">No recibido</div>
           </td>
-          <table style="width:400px;">
-            <tr>
-              <td><div class="alerta" style="background: white;float:left"></div><div style="font-size:x-small">No recibido</div></td>
-              <td><div class="alerta" style="background: blue;float:left">  </div><div style="font-size:x-small">Recibido</div></td>
-              <td><div class="alerta" style="background: green;float:left"></div><div style="font-size:x-small">Aceptado </div></td>
-              <td><div class="alerta" style="background: red;float:left">  </div><div style="font-size:x-small">Rechazado</div></td>
-              <td><div class="alerta" style="background: yellow;float:left">  </div><div style="font-size:x-small">En proceso</div></td>
-            </tr>
-          </table>
-
+          <td>
+            <div class="alerta" style="background: blue;float:left"></div>
+            <div style="font-size:x-small">Recibido</div></td>
+          <td>
+            <div class="alerta" style="background: green;float:left"></div>
+            <div style="font-size:x-small">Aceptado </div></td>
+          <td>
+            <div class="alerta" style="background: red;float:left"></div>
+            <div style="font-size:x-small">Rechazado</div></td>
+          <td>
+            <div class="alerta" style="background: yellow;float:left"></div>
+            <div style="font-size:x-small">En proceso</div></td>
         </tr>
-
       </table>
-
-    </center>
+    </tr>
+  </table>
+</center>
