--- a/app_documento/app/views/logproductos/index.html.erb
+++ b/app_documento/app/views/logproductos/index.html.erb
@@ -1,10 +1,10 @@
-<h1 style="margin-left: 20px;">Log de Productos</h1>
+<h1 style="margin-left: 20px;">Log Productos</h1>
 <div style="margin-left: 40px;margin-bottom: 20px;">
   <button style= Padding:10px>
-    <%= link_to 'Log de Documentos', logdocumento_index_path %>
+    <%= link_to 'Log Documentos', logdocumento_index_path %>
   </button>
   <button style= Padding:10px>
-    <%= link_to 'Log de Tramites', logtramite_index_path %>
+    <%= link_to 'Log Solicitudes', logtramite_index_path %>
   </button>
 </div>
 <table class="dataTable" id="tabla_show_log">
@@ -12,17 +12,28 @@
     <th>Usuario</th>
     <th>Producto</th>
     <th>Acción</th>
-    <th>Fecha</th>
-    
+    <th>Fecha</th>    
   </tr>
 
 <% @logproductos.each do |logproducto| %>
   <tr>
     <td style="width:150px;">
-      <%= logproducto.nusuario %>
+      <% if logproducto.usuario.nil? %>
+        <%= logproducto.nusuario %>
+      <% else %>
+        <%= link_to (logproducto.usuario) do %>
+          <%= logproducto.nusuario %>
+        <% end %>
+      <% end %>
     </td>
     <td style="width:400px">
-      <%= logproducto.nproducto %>
+      <% if logproducto.producto.nil? %>
+        <%= logproducto.nproducto %>
+      <% else %>
+        <%= link_to (logproducto.producto) do %>
+          <%= logproducto.nproducto %>
+        <% end %>
+      <% end %>
     </td>
     <td style="width:80px">
       <%= logproducto.tipo %>
