--- a/app_documento/app/views/logtramite/index.html.erb
+++ b/app_documento/app/views/logtramite/index.html.erb
@@ -1,36 +1,57 @@
-<h1 style="margin-left: 20px;">Log de Tramites</h1>
+<h1 style="margin-left: 20px;">Log Solicitudes</h1>
 <div style="margin-left: 40px;margin-bottom: 20px;">
   <button style= Padding:10px>
-    <%= link_to 'Log de Documentos', logdocumento_index_path %>
+    <%= link_to 'Log Productos', logproductos_path %>
   </button>
   <button style= Padding:10px>
-    <%= link_to 'Log de Documentos', logdocumento_index_path %>
+    <%= link_to 'Log Documentos', logdocumento_index_path %>
   </button>
 </div>
 <table class="dataTable" id="tabla_show_log">
   <tr>
     <th>Usuario</th>
     <th>Producto</th>
-    <th>Acción</th>
+    <th>Documento</th>
+    <th>Acción <span style="font-weight: normal;"><br> A-Aceptado <br> R- Rechazado </span></th>
     <th>Fecha</th>
-    
   </tr>
-
-<% @logtramites.each do |logtramite| %>
-  <tr>
-    <td style="width:150px;">
-      <%= logtramite.nusuario %>
-    </td>
-    <td style="width:400px">
-      <%= logtramite.nproducto %>
-    </td>
-    <td style="width:80px">
-      <%= logtramite.tipo %>
-    </td>
-    <td>
-      <%= logtramite.created_at.strftime("%I:%M%p")%> 
-      <%= logtramite.created_at.day%>/<%= logtramite.created_at.month%>/<%= logtramite.created_at.year%>
-    </td>
-  </tr>
-<% end %>
+  
+  <% @logtramites.each do |logtramite| %>
+    <tr>
+      <td style="width:150px;">
+        <% if logtramite.usuario.nil? %>
+        <%= logtramite.nusuario %>
+      <% else %>
+        <%= link_to (logtramite.usuario) do %>
+          <%= logtramite.nusuario %>
+        <% end %>
+      <% end %>
+      </td>
+      <td style="width:400px">
+      <% if logtramite.producto.nil? %>
+        <%= logtramite.nproducto %>
+      <% else %>
+        <%= link_to (logtramite.producto) do %>
+          <%= logtramite.nproducto %>
+        <% end %>
+      <% end %>
+      </td>
+      <td style="width:400px">
+        <% if logtramite.tramite.nil? %>
+          <%= logtramite.ntipodocumento %>
+        <% else %>
+          <%= link_to (logtramite.tramite) do %>
+            <%= logtramite.ntipodocumento %>
+          <% end %>
+        <% end %>        
+      </td>
+      <td style="width:80px">
+        <%= logtramite.tipo %>
+      </td>
+      <td>
+        <%= logtramite.created_at.strftime("%I:%M%p")%> 
+        <%= logtramite.created_at.day%>/<%= logtramite.created_at.month%>/<%= logtramite.created_at.year%>
+      </td>
+    </tr>
+  <% end %>
 </table>
