--- a/app_documento/app/views/requisitos/show.html.erb
+++ b/app_documento/app/views/requisitos/show.html.erb
@@ -1,6 +1,6 @@
-<table class="area_show" style="margin-left:230px;">
-  <tr >
-    <td>
+<table class="area_show" style="margin-left:150px;width:500px">
+  <tr>
+    <td style="text-align: center;">
       <div class="title_show">
         <center><h1><%=@requisito.TipoRequisito.name %></h1></center>
       </div>
@@ -8,8 +8,8 @@
   </tr>
   <tr>
     <td>
-      <table class="tabla_show" id="arregla" style="margin-left:35px;">
-        <!-- <tr>
+      <table id="arregla" style="margin-left:35px;">
+        <tr>
           <tr>
             <td style="max-width: 40px;">
               <b>Solicitud:</b> 
@@ -18,7 +18,7 @@
               <%= @requisito.tramite.TipoDocumento.descripcion %>
             </td>
           </tr>
-        <tr> -->
+        <tr>
           <td>
             <b>Producto:</b> 
           </td>
