--- a/app_documento/app/views/tramites/show.html.erb
+++ b/app_documento/app/views/tramites/show.html.erb
@@ -1,4 +1,4 @@
-<table id="area_tramite">
+<table id="area_tramite" style="margin-left: 40px;">
   <tr>
     <td>
       <div class="title_show">
@@ -12,12 +12,10 @@
            <h2>Requisitos</h2>
          </th>
        </thead>
-       
        <tbody>
-        
          <% @tramite.requisitos.each_with_index do |r, index| %>
            <tr>
-             <td>
+             <td style="padding-left: 5px;">
                <%= content_tag "span", class: "content-estado", id:"estado"+index.to_s, data: { requisito: r } do %>
                <%= link_to r.TipoRequisito.name, r %>
              <% end %>
@@ -28,17 +26,40 @@
      </table>
      <table style="min-width:350px;margin-left:25px">
       <tr>
-        <td><div class="alerta" style="background: white;float:left"></div><div style="font-size:x-small">Stand-by</div></td>
-        <td><div class="alerta" style="background: green;float:left"></div><div style="font-size:x-small">Aceptado</div></td>
-        <td><div class="alerta" style="background: red;float:left">  </div><div style="font-size:x-small">Rechazado</div></td>  
+        <td>
+          <div class="alerta" style="background: white;float:left"></div>
+          <div style="font-size:x-small">
+            Stand-by
+          </div>
+        </td>
+        <td>
+          <div class="alerta" style="background: green;float:left"></div>
+          <div style="font-size:x-small">
+            Aceptado
+          </div>
+        </td>
+        <td>
+          <div class="alerta" style="background: red;float:left"></div>
+          <div style="font-size:x-small">
+            Rechazado
+          </div>
+        </td>  
       </tr>
      </table>
     </td>
   </tr>
   <tr>
     <td valign="top">
-      <table class="tabla_show">
+      <table class="tabla_show" style="widht:75;margin-left: 25px;padding-right: 60px;">
         <% if not @tramite.producto.nil? %>
+          <tr>
+            <td style="width:25%;padding-right: 10px;">
+              <b>#Solicitud:</b>
+            </td>
+            <td>
+              <%= @tramite.id %>
+            </td>
+          </tr>
           <tr>
             <td>
               <b>Producto:</b>
@@ -51,22 +72,21 @@
         <% if current_usuario.admin > 0 %>
           <tr>
             <td> <b>Cliente:</b></td>
-            <%  %>
             <td> <%= @tramite.usuario.compania%></td>
           </tr>
         <% end %>
         <% if @tramite.recibido %>
         <tr>
-          <td>
-            <b>Fecha Solicitud:</b>
+          <td style="padding-top: 10px;">
+            <b>Fecha<br> Solicitud:</b>
           </td>
           <td>
             <%= @tramite.fecha_recepcion %>
           </td>
         </tr>
         <tr>
-          <td>
-            <b>#Requisitos faltantes:</b>
+          <td style="padding-top: 10px;">
+            <b>#Requisitos<br> faltantes:</b>
           </td>
           <td>
             <%= @req_faltantes %>
@@ -78,6 +98,11 @@
   <tr>
     <td>
       <div style="margin-left:30px">
+        <% if current_usuario.admin > 0 and @req_faltantes == 0%>
+          <button style="border:3px solid rgba(50,181,115,0.5);margin-top: -1px;">
+            <%= link_to 'Agregar MALasdasd Documento', new_documento_path( :producto_id => @tramite.producto )%>
+          </button>
+        <% end %>
         <% if current_usuario.admin > 0  and @tramite.recibido %>
           <button style="padding:10px">
             <%= link_to 'Editar', edit_tramite_path(@tramite) %>
