--- a/app_documento/app/views/logdocumento/index.html.erb
+++ b/app_documento/app/views/logdocumento/index.html.erb
@@ -7,52 +7,54 @@
     <%= link_to 'Log Solicitudes', logtramite_index_path %>
   </button>
 </div>
-<table class="dataTable" id="tabla_show_log">
-  <tr>
+
+<table class="log_data_table" id="tabla_show_log_doc">
+  <thead>
     <th>Usuario</th>
     <th>Producto</th>
     <th>Documento</th>
     <th>Acción</th>
     <th>Fecha</th>
-    
-  </tr>
+  </thead>
 
-  <% @logdocumentos.each do |logdocumento| %>
-  <tr>
-    <td style="width:150px;">
-      <% if logdocumento.usuario.nil? %>
+  <tbody>
+    <% @logdocumentos.each do |logdocumento| %>
+    <tr>
+      <td style="width:150px;">
+        <% if logdocumento.usuario.nil? %>
         <%= logdocumento.nusuario %>
-      <% else %>
+        <% else %>
         <%= link_to (logdocumento.usuario) do %>
-          <%= logdocumento.nusuario %>
+        <%= logdocumento.nusuario %>
         <% end %>
-      <% end %>
-    </td>
-    <td style="width:200px">
-      <% if logdocumento.producto.nil? %>
+        <% end %>
+      </td>
+      <td style="width:200px">
+        <% if logdocumento.producto.nil? %>
         <%= logdocumento.nproducto %>
-      <% else %>
+        <% else %>
         <%= link_to (logdocumento.producto) do %>
-          <%= logdocumento.nproducto %>
+        <%= logdocumento.nproducto %>
         <% end %>
-      <% end %>
-    </td>
-    <td style="width:200px">
-      <% if logdocumento.documento.nil? %>
+        <% end %>
+      </td>
+      <td style="width:200px">
+        <% if logdocumento.documento.nil? %>
         <%= logdocumento.ndocumento %>
-      <% else %>
+        <% else %>
         <%= link_to (logdocumento.documento.pdf.url) do %>
-          <%= logdocumento.ndocumento %>
+        <%= logdocumento.ndocumento %>
         <% end %>
-      <% end %>
-    </td>
-    <td style="width:80px">
-      <%= logdocumento.tipo %>
-    </td>
-    <td>
-      <%= logdocumento.created_at.strftime("%I:%M%p")%> 
-      <%= logdocumento.created_at.day%>/<%= logdocumento.created_at.month%>/<%= logdocumento.created_at.year%>
-    </td>
-  </tr>
-  <% end %>
+        <% end %>
+      </td>
+      <td style="width:80px">
+        <%= logdocumento.tipo %>
+      </td>
+      <td>
+        <%= logdocumento.created_at.strftime("%I:%M%p")%>
+        <%= logdocumento.created_at.day%>/<%= logdocumento.created_at.month%>/<%= logdocumento.created_at.year%>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
 </table>
