--- a/app_documento/app/views/logproductos/index.html.erb
+++ b/app_documento/app/views/logproductos/index.html.erb
@@ -7,41 +7,43 @@
     <%= link_to 'Log Solicitudes', logtramite_index_path %>
   </button>
 </div>
-<table class="dataTable" id="tabla_show_log">
-  <tr>
+<table class="log_data_table" id="tabla_show_log_prod">
+  <thead>
     <th>Usuario</th>
     <th>Producto</th>
     <th>Acción</th>
-    <th>Fecha</th>    
-  </tr>
+    <th>Fecha</th>
+  </thead>
 
-<% @logproductos.each do |logproducto| %>
-  <tr>
-    <td style="width:150px;">
-      <% if logproducto.usuario.nil? %>
+  <tbody>
+    <% @logproductos.each do |logproducto| %>
+    <tr>
+      <td style="width:150px;">
+        <% if logproducto.usuario.nil? %>
         <%= logproducto.nusuario %>
-      <% else %>
+        <% else %>
         <%= link_to (logproducto.usuario) do %>
-          <%= logproducto.nusuario %>
+        <%= logproducto.nusuario %>
         <% end %>
-      <% end %>
-    </td>
-    <td style="width:400px">
-      <% if logproducto.producto.nil? %>
+        <% end %>
+      </td>
+      <td style="width:400px">
+        <% if logproducto.producto.nil? %>
         <%= logproducto.nproducto %>
-      <% else %>
+        <% else %>
         <%= link_to (logproducto.producto) do %>
-          <%= logproducto.nproducto %>
+        <%= logproducto.nproducto %>
         <% end %>
-      <% end %>
-    </td>
-    <td style="width:80px">
-      <%= logproducto.tipo %>
-    </td>
-    <td>
-      <%= logproducto.created_at.strftime("%I:%M%p")%> 
-      <%= logproducto.created_at.day%>/<%= logproducto.created_at.month%>/<%= logproducto.created_at.year%>
-    </td>
-  </tr>
-<% end %>
+        <% end %>
+      </td>
+      <td style="width:80px">
+        <%= logproducto.tipo %>
+      </td>
+      <td>
+        <%= logproducto.created_at.strftime("%I:%M%p")%>
+        <%= logproducto.created_at.day%>/<%= logproducto.created_at.month%>/<%= logproducto.created_at.year%>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
 </table>
