--- a/app_documento/app/views/layouts/application.html.erb
+++ b/app_documento/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <div id="wrapper">
     <header>
       <div id="headUp">
-        <%= link_to image_tag("http://placehold.it/450x40/133655/911100.png", :id => "logo"), home_path %>
+        <%= link_to image_tag("/assets/logo_Moa_fondo_blanco.png", :id => "logo"), home_path %>
         <% if usuario_signed_in? %>
           <ul>
             <li class="drop" id="compania" title="<%= current_usuario.compania %>"><%= current_usuario.compania %></li>
