--- a/app_documento/app/views/logproductos/index.html.erb
+++ b/app_documento/app/views/logproductos/index.html.erb
@@ -7,43 +7,52 @@
     <%= link_to 'Log Solicitudes', logtramite_index_path %>
   </button>
 </div>
-<table class="log_data_table" id="tabla_show_log_prod">
-  <thead>
-    <th>Usuario</th>
-    <th>Producto</th>
-    <th>Acción</th>
-    <th>Fecha</th>
-  </thead>
 
-  <tbody>
-    <% @logproductos.each do |logproducto| %>
-    <tr>
-      <td style="width:150px;">
-        <% if logproducto.usuario.nil? %>
-        <%= logproducto.nusuario %>
-        <% else %>
-        <%= link_to (logproducto.usuario) do %>
-        <%= logproducto.nusuario %>
-        <% end %>
-        <% end %>
-      </td>
-      <td style="width:400px">
-        <% if logproducto.producto.nil? %>
-        <%= logproducto.nproducto %>
-        <% else %>
-        <%= link_to (logproducto.producto) do %>
-        <%= logproducto.nproducto %>
-        <% end %>
-        <% end %>
-      </td>
-      <td style="width:80px">
-        <%= logproducto.tipo %>
-      </td>
-      <td>
-        <%= logproducto.created_at.strftime("%I:%M%p")%>
-        <%= logproducto.created_at.day%>/<%= logproducto.created_at.month%>/<%= logproducto.created_at.year%>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+<div style="border-bottom: 2px solid rgba(116,14,0,0.8);">
+  <table class="log_data_table" id="tabla_show_log_prod">
+    <thead>
+      <th>Usuario</th>
+      <th>Producto</th>
+      <th>Acción</th>
+      <th>Fecha</th>
+    </thead>
+
+    <tbody style="height:320">
+      <% @logproductos.each do |logproducto| %>
+      <tr>
+        <td style="width:150px;">
+          <% if logproducto.usuario.nil? %>
+          <%= logproducto.nusuario %>
+          <% else %>
+          <%= link_to (logproducto.usuario) do %>
+          <%= logproducto.nusuario %>
+          <% end %>
+          <% end %>
+        </td>
+        <td style="width:400px">
+          <% if logproducto.producto.nil? %>
+          <%= logproducto.nproducto %>
+          <% else %>
+          <%= link_to (logproducto.producto) do %>
+          <%= logproducto.nproducto %>
+          <% end %>
+          <% end %>
+        </td>
+        <td style="width:80px">
+          <%= logproducto.tipo %>
+        </td>
+        <td>
+          <%= logproducto.created_at.strftime("%I:%M%p")%>
+          <%= logproducto.created_at.day%>/<%= logproducto.created_at.month%>/<%= logproducto.created_at.year%>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<div style="width: 400px;padding-left:40px;margin-top: 10px;">
+  <button style= "padding:10px;">
+    <%= link_to 'Volver', :back %>
+  </button>
+</div>
